# 3d-renderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
assets/maps/: level1.spawn  level1.txt
assets/scenes/: cornell.scene  golden.scene
build-linux/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  rasterizer  raycaster  raytracer  test_golden  test_math  test_rasterizer  test_raycaster
build-linux/Testing/Temporary/: CTestCostData.txt
include/renderer/app/: app_state.h  renderer_app.h  renderer_controller.h
include/renderer/core/: asset_locator.h  cli.h  color.h  framebuffer.h  path.h  texture.h
include/renderer/math/: constants.h  mat4.h  ray.h  vec2.h  vec3.h  vec4.h
include/renderer/platform/: sdl_window.h
include/renderer/rasterizer/: mesh.h  rasterizer.h
include/renderer/raycaster/: map.h  raycaster_engine.h
include/renderer/raytracer/: aabb.h  bvh.h  hittable.h  material.h  mesh_bvh.h  scene_loader.h  triangle.h
src/app/: app_state.cpp  main.cpp  raytracer_rasterizer_controllers.cpp  renderer_app.cpp
src/core/: asset_locator.cpp  framebuffer.cpp  texture.cpp
src/platform/: sdl_window.cpp
src/rasterizer/: main.cpp  mesh.cpp  rasterizer.cpp
src/raycaster/: main.cpp  map.cpp  raycaster_engine.cpp
src/raytracer/: main.cpp  mesh_bvh.cpp  scene_loader.cpp
tests/: test_app_smoke.cpp  test_asset_locator.cpp  test_golden.cpp  test_math.cpp  test_rasterizer.cpp  test_raycaster.cpp
tests/golden/: rasterizer.hash  raycaster.hash  raytracer.arm64.hash  raytracer.hash  raytracer.windows.hash  raytracer.x86_64.hash
